<resources>
      <string name="action_settings"></string>
    <string name="app_sina_consumer_key">1817082055</string>
    <string name="app_sina_consumer_secret">c44f03beabd8ec53ff7315938efee9c0</string>
    <string name="suningEbuy_sina_key">suningshop@gmail.com</string>
    <string name="suningEbuy_sina_secret">suningegou120.</string>
    <string name="network_withoutnet">当前网络连接异常，检查网络后再试吧</string>
    <string name="network_neterror">当前网络不佳，请稍后再试试</string>
    <string name="network_parser_error">好像出错啦，稍后再试吧</string>
    <string name="networkerror">网络异常，请检查网络连接!</string>
    <string name="app_name">电子商城</string>
    <string name="loading">努力加载中...</string>
    <string name="waitforloading">努力加载中...</string>
    <string name="request_timeout">网络请求超时！</string>
    <string name="pub_confirm">确定</string>
    <string name="pub_continue">继续</string>
    <string name="pub_cancel">取消</string>
    <string name="global_yuan">￥</string>
    <string name="global_menu_goto_favor">去收藏夹</string>
    <string name="get_data_fail">获取数据失败！</string>
    <string name="shortcut">是否添加桌面快捷方式？</string>
    <string name="dialog_tel">4006-160-066</string>
    <string name="dialog_name">24小时客服热线</string>
    <string name="network_unstable">网络不稳定，请稍后重试！</string>
    <string name="friendly_reminder">友情提醒</string>
    <string name="goto_my_ebuy">我的易购</string>
    <string name="goto_home">去首页</string>
    <string name="voice_title">语音识别</string>
    <string name="voice_msg">您的手机暂不支持语音识别功能，点击确定下载安装最新Google语音搜索软件，您也可以到应用商店中输入“语音搜索”自行下载安装该软件。</string>
    <string name="qbuy_info">\"一键购\"简化了下单流程，您只需轻轻一点\"一键购\"按钮，便可提交订单。您可以在此添加多个常用的下单地址，并设置其中一个为默认地址。</string>
    <string name="phone_null_function">您的机器不支持电话功能</string>
    <string name="phone_sim_disabled">请插入SIM卡或检查SIM卡状态</string>
    <string name="init_2g_network_msg">当前网络网速缓慢，影响您的使用，请切换接入点名称（APN）。</string>
    <string name="cancel_error">注销失败，请检查网络!</string>
    <string name="cancel_wait">正在注销，请稍候...</string>
    <string name="autoLogin_wait">正在自动登录,请稍候...</string>
    <string name="login_register">登录/注册</string>
    <string name="library">图书馆</string>
    <string name="topics">专题馆</string>
    <string name="home_tab">首页</string>
    <string name="search_tab">搜索</string>
    <string name="cart_tab">购物车</string>
    <string name="my_ebuy_tab">我的易购</string>
    <string name="more_tab">更多</string>
    <string name="auto_login_success">自动登录成功!</string>
    <string name="auto_login_failure">自动登录失败，请检查您的网络情况!</string>
    <string name="login_failure">服务器出错，登录异常！</string>
    <string name="show_logon_failure">自动登录失败，您的密码错误请重新登录！</string>
    <string name="auto_login">自动登录...</string>
    <string name="no_find_id">请升级客户端参与活动</string>
    <string name="widget_loading">努力加载中...</string>
    <string name="widget_no_goods">暂无抢购商品</string>
    <string name="get_intent_fail">网络连接失败，请检查网络</string>
    <string name="get_sales_promotion_fail">易购资讯请求失败，请检查您的网络</string>
    <string name="get_eight_ads_fail">八连版请求失败，请检查您的网络</string>
    <string name="lottery_yfb_check_fail">查询易付宝余额失败</string>
    <string name="lottery_yfb_pay_success">恭喜您支付成功！</string>
    <string name="lottery_yfb_pay_fail">对不起，本次支付失败！</string>
    <string name="lottery_commit_data">正在提交数据...</string>
    <string name="yfb_password_nodata">您好，易付宝支付密码不能为空！</string>
    <string name="yfb_status_no_used">易付宝未激活，请激活易付宝!</string>
    <string name="yfb_money_out">(余额不足)</string>
    <string name="yfb_money__password_hint">您好，易付宝支付密码不能为空！</string>
    <string name="order_No">订 单 号：</string>
    <string name="submit_time">提交时间：</string>
    <string name="product_name">商品名称：</string>
    <string name="service_type">服务类型：</string>
    <string name="return_goods">退货</string>
    <string name="switch_goods">换货</string>
    <string name="other_condition">另约</string>
    <string name="status_cptitle">进度跟踪：时间记录</string>
    <string name="flight_track_activity_title">航班查询</string>
    <string name="flight_track_activity_toast1">与到达城市相同，请重新选择！</string>
    <string name="flight_track_activity_toast2">与出发城市相同，请重新选择！</string>
    <string name="flight_track_activity_toast">对不起，出发城市与到达城市相同，请重新选择！</string>
    <string name="comp_list_retry_text">重试</string>
    <string name="comp_list_empty_text">暂无数据</string>
    <string name="comp_list_no_data">暂无数据</string>
    <string name="eval_title_consult_list">咨询列表</string>
    <string name="eval_title_evaluate">用户评价</string>
    <string name="eval_consult">咨询</string>
    <string name="eval_evaluate">评价</string>
    <string name="eval_customer">顾客</string>
    <string name="eval_success">评论成功,等待验证！</string>
    <string name="eval_title">请输入评论标题！</string>
    <string name="eval_content">请输入评价内容！</string>
    <string name="eval_evaluate_count">您输入的字数超过140了，请重新输入！</string>
    <string name="eval_book_consult">图书咨询</string>
    <string name="eval_goods_consult">商品咨询</string>
    <string name="eval_goods_evaluate">用户评价</string>
    <string name="eval_consult_count">您输入的字数请不要超过146个字</string>
    <string name="goods_detail_price_title">易购价：</string>
    <string name="goods_detail_deliver_to">送至</string>
    <string name="goods_detail_pack_list">装箱清单</string>
    <string name="goods_detail_intro">商品介绍</string>
    <string name="goods_detail_param">商品参数</string>
    <string name="goods_detail_service">推荐服务</string>
    <string name="goods_detail_evaluate">用户评价:</string>
    <string name="goods_detail_evaluate_title">用户评价</string>
    <string name="goods_detail_book_consult">图书咨询:</string>
    <string name="goods_detail_goods_consult">商品咨询:</string>
    <string name="goods_detail_add_cart">加入购物车</string>
    <string name="goods_detail_add_favor">收藏商品</string>
    <string name="goods_detail_after_service">售后服务</string>
    <string name="goods_detail_after_service_info">因厂家会在没有任何提前通知的情况下更改包装、产地或者一些附件，本司不能确保客户收到的货物与商城图片、产地、附件说明完全一致。网站商品的功能参数仅供参考，请以实物为准，我司只能确保网站经营商品均为原厂正品行货！并且保证与当时市场上同样主流新品一致。若本商城没有及时更新，请大家谅解！</string>
    <string name="goods_detail_goto_detail">查看商品详情</string>
    <string name="goods_detail_unit">件</string>
    <string name="books_detail_intro">图书参数</string>
    <string name="books_detail_introduce">图书介绍</string>
    <string name="books_detail_image">商品图片</string>
    <string name="books_show_list">图书晒单:</string>
    <string name="goods_show_list">商品晒单:</string>
    <string name="goods_show_list_rushbuy">晒单专区</string>
    <string name="books_share_weibo">分享给朋友</string>
    <string name="goods_detail_title">标题</string>
    <string name="goods_detail_author">作者:</string>
    <string name="goods_detail_intro_title">介绍</string>
    <string name="goods_detail_send_city">南京市</string>
    <string name="goods_detail_send_date">送达时间：</string>
    <string name="goods_detail_processbar">正在获取</string>
    <string name="goods_detail_processbar_price">正在获取价钱</string>
    <string name="goods_detail_collection">收藏</string>
    <string name="goods_detail_qbuy">点即购</string>
    <string name="goods_detail_book_intro">图示介绍</string>
    <string name="goods_detail_book">图书详情</string>
    <string name="no_data">暂无信息</string>
    <string name="price_is_zero_prompt" />
    <string name="code_send_successed">验证码发送成功，请耐心等待！</string>
    <string name="code_sending">验证码正在发送中，请耐心等待！</string>
    <string name="activated_successed">账号激活成功！</string>
    <string name="my_points">我的积分</string>
    <string name="send_maxcount">对不起，每天只能获取3次验证码！</string>
    <string name="no_phone_number">手机号码为空或格式不正确！</string>
    <string name="enter_username">请输入用户名！</string>
    <string name="enter_chinese_character">请输入2到6位的汉字！</string>
    <string name="enter_credentials">证件号码不能为空！</string>
    <string name="id_card_format">请输入正确的证件号码</string>
    <string name="select_city">请选择省市！</string>
    <string name="enter_address">请输入详细地址！</string>
    <string name="query_order_failed">查询订单数目失败！</string>
    <string name="delete_favorite_verify">确定删除这条收藏吗？</string>
    <string name="my_coupon">我的易购券</string>
    <string name="my_easy_payment">我的易付宝</string>
    <string name="no_activate">未激活</string>
    <string name="activated">已激活</string>
    <string name="activate_tips">您的易付宝尚未激活，请绑定手机号码后激活使用！</string>
    <string name="bind_telephone">绑定手机号码</string>
    <string name="bind_activate">绑定手机号码并激活</string>
    <string name="not_activate_tips">您的易付宝尚未激活，请激活后使用！</string>
    <string name="activate_easy_payment">激活易付宝</string>
    <string name="check_email">请先验证您的邮箱！</string>
    <string name="please_waiting">请稍等...</string>
    <string name="credentials_type">选择证件类型</string>
    <string name="activate_retry">激活失败，请重试！</string>
    <string name="select_question">选择问题</string>
    <string name="enter_name">请输入姓名！</string>
    <string name="enter_chinaese_name">请输入有效的姓名</string>
    <string name="enter_password">支付密码请输入6-20位数字和字母的合集！</string>
    <string name="logon_and_pay_password_prompt">支付密码不能和登录密码相同，请重新输入支付密码！</string>
    <string name="enter_password_accord">密码只能输入数字和字母！</string>
    <string name="select_security_issue">请选择安全问题！</string>
    <string name="enter_answer">请输入问题答案！</string>
    <string name="select_credentials">请选择证件类型！</string>
    <string name="enter_id_number">请输入证件号码！</string>
    <string name="activationing">激活中，请稍等...</string>
    <string name="id_card">居民身份证</string>
    <string name="passport">护照</string>
    <string name="military_id">军人证</string>
    <string name="my_flight">我的商旅</string>
    <string name="order_filter">订单筛选</string>
    <string name="filter_item">近一周的订单,近一月的订单,以往所有订单</string>
    <string name="order_cancel_successed">取消订单成功</string>
    <string name="order_cancel_failed">取消订单失败</string>
    <string name="cancel_order_reason">订单取消原因</string>
    <string name="telephone_name">手机号码:</string>
    <string name="codeSendTipsIsSend">友情提醒：已向您的手机发送了验证码短信，请查看短信。如果1分钟内还未收到短信，请再次点击获取</string>
    <string name="codeSendTipsOutOfNum">您今天的验证短信已经发满三次，每天累计最多发送三次验证短信</string>
    <string name="yfb_status_error">易付宝信息获取异常，您可尝试重新登录后使用</string>
    <string name="clear_favorite_verify">确定清空收藏吗？</string>
    <string name="delete_favorite_tips">正在删除中...</string>
    <string name="delete_favorite_failed">删除收藏商品失败，请重试.</string>
    <string name="goods_detail_group_apply">填写团购报名信息</string>
    <string name="goods_detail_group_title">团购详情</string>
    <string name="goods_detail_group_sub_title_prefix">今日团购：</string>
    <string name="goods_detail_group_price">易购价</string>
    <string name="goods_detail_group_count_already">已团</string>
    <string name="goods_detail_group_privilege">优惠</string>
    <string name="goods_detail_group_time_left">剩余时间：</string>
    <string name="goods_detail_group_joined">已有人参团</string>
    <string name="goods_detail_group_info_privilege">优惠金额：</string>
    <string name="goods_list">团购列表</string>
    <string name="goods_status">团购状态</string>
    <string name="goods_end">已结束</string>
    <string name="goods_begin">距离开始</string>
    <string name="goods_start">即将开始</string>
    <string name="delivery_time">送达时间：</string>
    <string name="no_good">此商品暂时无货</string>
    <string name="sorry_no_buy">很抱歉，本商品在此地暂不销售</string>
    <string name="time_remained">距结束还有</string>
    <string name="over">活动已结束</string>
    <string name="time_begin">距开始还有</string>
    <string name="change_ctiy_failed">切换城市失败</string>
    <string name="load_grouplst_failed">载入团购信息出错啦...</string>
    <string name="group_tips_msg">请关注报名信息，于团购报名结束半小时后，24小时内下单购买.</string>
    <string name="group_tips">请关注报名信息，于团购报名结束半小时后，24小时内下单购买.</string>
    <string name="goods_detail_rush_title">抢购</string>
    <string name="goods_detail_rush_price">抢购价：</string>
    <string name="goods_detail_rush_status">抢购状态：</string>
    <string name="users_feedback">用户反馈</string>
    <string name="wait_for_pay">待支付</string>
    <string name="wait_for_receipt">待收货</string>
    <string name="wait_for_evaluation">待评价</string>
    <string name="allorders">全部订单</string>
    <string name="collection">我的收藏</string>
    <string name="browse_history">浏览历史</string>
    <string name="address_manage_title">地址管理</string>
</resources>