<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_ebuy_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pub_color_twelev"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pub_color_twelev"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/pub_color_twelev"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_myebuy_title"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_myebuy_title"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_myebuy_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/android_public_space_20px"
                    android:layout_marginTop="@dimen/android_public_space_20px"
                    android:scaleType="fitXY"
                    android:src="@drawable/btn_myebuy_setting" />

                <LinearLayout
                    android:id="@+id/layout_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_myebuy_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:text="hi 欢迎来到胖妞电子商城"
                        android:textColor="@color/white"
                        android:textSize="@dimen/android_public_textsize_18pt" />

                    <Button
                        android:id="@+id/btn_myebuy_login"
                        android:layout_width="@dimen/ios_public_space_260px"
                        android:layout_height="@dimen/ios_public_space_70px"
                        android:layout_marginTop="@dimen/android_public_space_20px"
                        android:background="@color/white"
                        android:text="登录/注册"
                        android:textSize="@dimen/android_public_textsize_18pt" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/android_public_textsize_18pt"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.0dip"
                android:background="@drawable/input_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/android_public_space_80px"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:id="@+id/btn_order_nopay"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0" >

                        <TextView
                            style="@style/myebuy_item_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/wait_for_pay"
                            android:textColor="@color/pub_color_eight"
                            android:textSize="@dimen/android_public_textsize_20pt" />

                        <TextView
                            android:id="@+id/txt_count_nopay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="@dimen/android_public_space_7px"
                            android:layout_marginTop="@dimen/android_public_space_7px"
                            android:background="@drawable/shoppingcart_tab_num_bg"
                            android:gravity="center"
                            android:textColor="@color/pub_color_one"
                            android:textSize="@dimen/android_public_textsize_14pt"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/pub_margin_or_padding_space_half_of_one"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:src="@drawable/divider_horizontal" />

                    <RelativeLayout
                        android:id="@+id/btn_wait_for_receipt"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0" >

                        <TextView
                            style="@style/myebuy_item_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/wait_for_receipt"
                            android:textColor="@color/pub_color_eight"
                            android:textSize="@dimen/android_public_textsize_20pt" />

                        <TextView
                            android:id="@+id/txt_count_receipt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="@dimen/android_public_space_7px"
                            android:layout_marginTop="@dimen/android_public_space_7px"
                            android:background="@drawable/shoppingcart_tab_num_bg"
                            android:gravity="center"
                            android:textColor="@color/pub_color_one"
                            android:textSize="@dimen/android_public_textsize_14pt"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/pub_margin_or_padding_space_half_of_one"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:src="@drawable/divider_horizontal" />

                    <RelativeLayout
                        android:id="@+id/btn_wait_for_evaluation"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0" >

                        <TextView
                            style="@style/myebuy_item_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/wait_for_evaluation"
                            android:textColor="@color/pub_color_eight"
                            android:textSize="@dimen/android_public_textsize_20pt" />

                        <TextView
                            android:id="@+id/txt_count_evaluation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="@dimen/android_public_space_7px"
                            android:layout_marginTop="@dimen/android_public_space_7px"
                            android:background="@drawable/shoppingcart_tab_num_bg"
                            android:gravity="center"
                            android:textColor="@color/pub_color_one"
                            android:textSize="@dimen/android_public_textsize_14pt"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/pub_margin_or_padding_space_half_of_one"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:src="@drawable/divider_horizontal" />

                    <RelativeLayout
                        android:id="@+id/rl_allorder"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0" >

                        <TextView
                            style="@style/myebuy_item_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/allorders"
                            android:textColor="@color/pub_color_eight"
                            android:textSize="@dimen/android_public_textsize_20pt" />

                        <TextView
                            android:id="@id/txt_count_evaluation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="@dimen/android_public_space_7px"
                            android:layout_marginTop="@dimen/android_public_space_7px"
                            android:background="@drawable/shoppingcart_tab_num_bg"
                            android:gravity="center"
                            android:textColor="@color/pub_color_one"
                            android:textSize="@dimen/android_public_textsize_14pt"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/input_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_collection"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:paddingLeft="@dimen/android_public_space_20px"
                    android:paddingRight="@dimen/android_public_space_20px" >

                    <TextView
                        style="@style/myebuy_item_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/collection"
                        android:textColor="@color/pub_color_eight"
                        android:textSize="@dimen/android_public_textsize_20pt" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/arrow_next" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/pub_margin_or_padding_space_half_of_one"
                    android:scaleType="fitXY"
                    android:src="@drawable/divide_line_input" />

                <RelativeLayout
                    android:id="@+id/rl_history"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:paddingLeft="@dimen/android_public_space_20px"
                    android:paddingRight="@dimen/android_public_space_20px" >

                    <TextView
                        style="@style/myebuy_item_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/browse_history"
                        android:textColor="@color/pub_color_eight"
                        android:textSize="@dimen/android_public_textsize_20pt" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/arrow_next" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="0.0dip"
                android:background="#ffffffff"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_addressmanager"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:paddingLeft="@dimen/android_public_space_20px"
                    android:paddingRight="@dimen/android_public_space_20px" >

                    <TextView
                        style="@style/myebuy_item_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/address_manage_title"
                        android:textColor="@color/pub_color_eight"
                        android:textSize="@dimen/android_public_textsize_20pt" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/arrow_next" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/pub_margin_or_padding_space_half_of_one"
                    android:scaleType="fitXY"
                    android:src="@drawable/divide_line_input" />

                <RelativeLayout
                    android:id="@+id/rl_feedback"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:paddingLeft="@dimen/android_public_space_20px"
                    android:paddingRight="@dimen/android_public_space_20px" >

                    <TextView
                        style="@style/myebuy_item_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/users_feedback"
                        android:textColor="@color/pub_color_eight"
                        android:textSize="@dimen/android_public_textsize_20pt" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/arrow_next" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>